changed spacing for the 2nd protein and media query for resize ratio correction

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,11 @@ html {
   box-sizing: inherit;
 }
 
-.protein {
-  max-width: 35.8%;
-  padding-top: 2.2em;
+
+
+@media only screen and (min-width: 60em) {
+  .protein {
+    max-width: 35.8%;
+    padding-top: 2.2em;
+  }
 }
